<resources>
    <string name="app_name">EmployeTracker</string>
    <string name="start_tracking">Start tracking</string>
    <string name="tracking_is_stop_now">Tracking is stopped now</string>
    <string name="tracking_is_start_now">Tracking is started now</string>
    <string name="start">Start</string>
    <string name="status">Status</string>
    <string name="view_status_and_location_data">View status and location data</string>
    <string name="chat">Chat</string>
    <string name="com_eith_main_acc">Communicate with main account</string>
    <string name="camera">Camera</string>
    <string name="send_photo_with_location">Send photo with location</string>
    <string name="settings">Settings</string>
    <string name="configure_app_operation">Configure application operation</string>
    <string name="help">Help</string>
    <string name="guis_hoe_to_use">Guide how to use this application</string>

    <string name="Address1_error_msg">Address1 can not be empty</string>
    <string name="Address_error_msg">Address can not be empty</string>
    <string name="Address2_error_msg">Address2 can not be empty</string>
    <string name="city_only_special_msg">City name is not valid</string>
    <string name="userName_msg">UserName is not valid</string>
    <string name="imei_cannot_be_empty">IMEI number cannot be blank.</string>
    <string name="route_name_cannot_be_empty">Route name cannot be blank.</string>

    <string name="noInternetMsg">No internet connection!</string>
    <string name="phone_num_error_msg">Phone number must be 10 digits long</string>
    <string name="enter_valid_phone">Mobile number cannot be blank.</string>
    <string name="first_name_error_msg">Name must be at least 3 characters long.</string>
    <string name="last_name_error_msg">Last name must be at least 3 characters long.</string>
    <string name="first_name_only_special_msg">Special characters and numbers are not allowed in name.</string>
    <string name="last_name_only_special_msg">Special characters and numbers are not allowed in last name.</string>
    <string name="first_name_cannot_be_empty">First name cannot be blank.</string>
    <string name="last_cannot_be_empty">Last name cannot be blank.</string>
    <string name="city_error_msg">City name can not be empty</string>
    <string name="city_only_numeric_msg">Only numeric characters are not allowed in city name</string>

    <string name="state_error_msg">State name can not be empty</string>
    <string name="state_only_special_msg">State name is not valid</string>
    <string name="state_only_numeric_msg">Only numeric characters are not allowed in state name.</string>
    <string name="state_name_error_msg_max">State name length maximum 14 characters.</string>
    <string name="zipcode_error_msg">Postal code is not valid</string>
    <string name="address_error">Address is not valid</string>
    <string name="email_error_msg">Please enter valid email Id</string>
    <string name="password_must_error_msg">Password must be at least 6 characters</string>
    <string name="old_pass_enter">Please enter old Password </string>
    <string name="pass_reset_successfully">your password has been reset successfully </string>
    <string name="msg_password_must_contain_numeric_special_character">Passowrd must contain a numeric and a character.</string>
    <string name="pass_do_not_match_error_msg">Passwords do not match</string>
    <string name="pass_blank_msg">Password can not be blank</string>
    <string name="pls_try_again">Please try again</string>
    <string name="home">Home</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="angle">Angle</string>
    <string name="speed">Speed</string>
    <string name="accuracy">Accuracy</string>
    <string name="time">Time</string>
    <string name="device_imei">Device IMEI</string>
    <string name="tracking_interval">Tracking Interval</string>
    <string name="chat_interval">Chat Interval</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
</resources>
