<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/etxtUserNameLogin"
                style="@style/edit_text_theme"
                android:hint="@string/user_name"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/etxtPasswordLogin"
                style="@style/edit_text_theme"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>




        <Button
            android:id="@+id/btnSubmitLogin"
            style="@style/button_theme"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>