<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_42"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_dim_16"
            android:text="Home"
            android:textStyle="bold"
            />

        <LinearLayout
            android:id="@+id/llStartTracking"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_58"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/dim_36"
                    android:layout_height="@dimen/dim_36"
                    android:src="@mipmap/power" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/txtStartTrackHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_tracking"
                    android:textSize="@dimen/text_dim_14"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtStatusHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tracking_is_start_now"
                    android:textSize="@dimen/h_text_dim_12"
                    android:layout_marginTop="@dimen/dim_3"
                    android:textColor="@color/black"/>

            </LinearLayout>



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_1"
            android:background="@color/light_grey"
            />

        <LinearLayout
            android:id="@+id/llStatus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_58"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/dim_36"
                    android:layout_height="@dimen/dim_36"
                    android:src="@mipmap/map_point"
                    android:id="@+id/imageView2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="@dimen/text_dim_14"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_status_and_location_data"
                    android:textSize="@dimen/h_text_dim_12"
                    android:layout_marginTop="@dimen/dim_3"
                    android:textColor="@color/black"/>
            </LinearLayout>



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_1"
            android:background="@color/light_grey"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_58"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/dim_36"
                    android:layout_height="@dimen/dim_36"
                    android:src="@mipmap/chat" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chat"
                    android:textSize="@dimen/text_dim_14"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/com_eith_main_acc"
                    android:textSize="@dimen/h_text_dim_12"
                    android:layout_marginTop="@dimen/dim_3"
                    android:textColor="@color/black"/>
            </LinearLayout>



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_1"
            android:background="@color/light_grey"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_58"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/dim_36"
                    android:layout_height="@dimen/dim_36"
                    android:src="@mipmap/camera" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:textSize="@dimen/text_dim_14"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_photo_with_location"
                    android:textSize="@dimen/h_text_dim_12"
                    android:layout_marginTop="@dimen/dim_3"
                    android:textColor="@color/black"/>
            </LinearLayout>



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_1"
            android:background="@color/light_grey"
            />
        <LinearLayout
            android:id="@+id/llSettingHome"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_58"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/dim_36"
                    android:layout_height="@dimen/dim_36"
                    android:src="@mipmap/settings" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textSize="@dimen/text_dim_14"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/configure_app_operation"
                    android:textSize="@dimen/h_text_dim_12"
                    android:layout_marginTop="@dimen/dim_3"
                    android:textColor="@color/black"/>
            </LinearLayout>



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_1"
            android:background="@color/light_grey"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_58"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView

                    android:layout_width="@dimen/dim_42"
                    android:layout_height="@dimen/dim_42"
                    android:src="@mipmap/help" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help"
                    android:textSize="@dimen/text_dim_14"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guis_hoe_to_use"
                    android:textSize="@dimen/h_text_dim_12"
                    android:layout_marginTop="@dimen/dim_3"
                    android:textColor="@color/black"/>
            </LinearLayout>



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_1"
            android:background="@color/light_grey"
            />
    </LinearLayout>

</LinearLayout>
